[package]
name = "polkahub-backend"
version = "0.1.0"
authors = ["Akropolis Decentralised Ltd., <team@akropolis.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
dotenv = "0.15.0"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.44"
actix-web = { version = "2.0.0-alpha.2", features = ["openssl"] }
actix-rt = "1.0.0-alpha.2"
tokio = { version = "0.2.0-alpha.6", features = ["process"] }
askama = "0.8.0"
