[package]
name = "polkahub-backend"
version = "0.1.0"
authors = ["Akropolis Decentralised Ltd., <team@akropolis.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
dotenv = "0.15.0"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.44"
actix-web = { version = "2.0.0", features = ["openssl"] }
actix-rt = "1.0.0"
tokio = { version = "0.2.9", features = ["fs", "process"] }
askama = "0.8.0"
diesel = { version = "1.4.3", features = ["r2d2", "postgres", "chrono"] }
chrono = "0.4.10"
argon2rs = "0.2.5"
hex = "0.4.0"
jsonwebtoken = "6.0.1"
uuid = { version = "0.8.1", features = ["v4"] }
reqwest = "0.10.1"
names = "0.11.0"
base64 = "0.11.0"
